--- a/axiom-nsut/package.json
+++ b/axiom-nsut/package.json
@@ -7,7 +7,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.4",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.8.1",
     "web-vitals": "^4.2.4"
